--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,83 +1,49 @@
-# For help debugging build failures open an issue on the RStudio community with the 'github-actions' tag.
-# https://community.rstudio.com/new-topic?category=Package%20development&tags=github-actions
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+name: RUN_RDP
 
-name: R-CMD-check
+on: workflow_dispatch
 
 jobs:
-  R-CMD-check:
-    runs-on: ${{ matrix.config.os }}
+  build:
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    runs-on: windows-latest
+    timeout-minutes: 9999
 
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
-          - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-
-    env:
-      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      RSPM: ${{ matrix.config.rspm }}
-    
-   defaults:
-      run:
-        working-directory: myfunctionname
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@master
-        with:
-          r-version: ${{ matrix.config.r }}
-
-      - uses: r-lib/actions/setup-pandoc@master
-
-      - name: Query dependencies
-        run: |
-          install.packages('remotes')
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), "../.github/depends.Rds", version = 2)
-          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), "../.github/R-version")
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        if: runner.os != 'Windows'
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('../.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('../.github/R-version') }}-1-
-
-      - name: Install system dependencies
-        if: runner.os == 'Linux'
-        run: |
-          while read -r cmd
-          do
-            eval sudo $cmd
-          done < <(Rscript -e 'cat(remotes::system_requirements("ubuntu", "20.04"), sep = "\n")')
-      - name: Install dependencies
-        run: |
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("rcmdcheck")
-        shell: Rscript {0}
-
-      - name: Check
-        env:
-          _R_CHECK_CRAN_INCOMING_REMOTE_: false
-        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
-        shell: Rscript {0}
-
-      - name: Upload check results
-        if: failure()
-        uses: actions/upload-artifact@main
-        with:
-          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
-          path: check
+    - name: Download NGROK - NSSM.
+      run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/nssm.exe -OutFile nssm.exe
+        
+    - name: Copy NGROK - NSSM to System32.
+      run: | 
+        copy nssm.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
+        
+    - name: Connect to NGROK account use NGROK_AUTH_TOKEN.
+      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        
+    - name: Download BATCH NGROK_AP - NGROK_CHECK - NGROK_LOOP.
+      run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_AP.bat -OutFile NGROK_AP.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_CHECK.bat -OutFile NGROK_CHECK.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_LOOP.bat -OutFile NGROK_LOOP.bat
+        
+    - name: Create a NGROK .yml file.
+      run: start NGROK_AP.bat
+      
+    - name: Turn on RDP connection.
+      run: | 
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+        
+    - name: Create NGROK connection.
+      run: sc start ngrok
+      
+    - name: Run connection.
+      run: cmd /c NGROK_CHECK.bat
+      
+    - name: Success! You can run VPS use this informations.
+      run: cmd /c NGROK_LOOP.bat
